# COSC410-2025-TicTacToe

./: .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  noxfile.py  pyproject.toml
backend/alembic/: README  env.py
backend/app/: main.py
backend/app/tictactoe/: engine.py  router.py  schemas.py
backend/tests/: test_tictactoe_api.py  test_tictactoe_engine.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: TicTacToe.test.tsx
frontend/src/components/: TicTacToe.tsx
